--- a/src/composants/puzzle/styles.css
+++ b/src/composants/puzzle/styles.css
@@ -1,9 +1,15 @@
 .puzzle {
     display: grid;
-    grid-template-columns: repeat(var(--nombre-colonnes), 1fr);
-    grid-template-rows: repeat(var(--nombre-lignes), 1fr);
+    grid-template-columns: repeat(var(--nombre-pieces), 1fr);
+    grid-template-rows: repeat(var(--nombre-pieces), 1fr);
     gap: 1px;
-    width: 400px;
-    height: 400px;
-    border: 2px black solid;
+    width: calc(var(--container-size) * 1px);
+    height: calc(var(--container-size) * var(--ratio-image) * 1px);
   }
+
+  .puzzle__pieces--container {
+    width: calc(var(--container-size) / var(--nombre-pieces) * 1px);
+    height: calc(var(--container-size) / var(--nombre-pieces) * var(--ratio-image) * 1px);
+    background-color: #0003;
+  }
+
