--- a/src/styles.css
+++ b/src/styles.css
@@ -10,5 +10,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', Arial, sans-serif;
-  background-color: #494444;
+  background-color: #2f363e;
 }
