--- a/src/composants/piece/styles.css
+++ b/src/composants/piece/styles.css
@@ -7,3 +7,8 @@
     border: 1px white solid;
     cursor: grab;
 }
+
+.puzzle__pieces--container .piece {
+    margin-right: 0;
+    border: none;
+}
