--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
+:root {
+  --blue: #25354e;
+  --darkbrown: #292b2a;
+  --gold: #c09e5a;
+  --white: #fff;
+}
+
 * {
   box-sizing: border-box;
   position: relative;
